add custom installer examples

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'dropwizard-guicey-examples'
 
 include 'autoconfig-base',
-        'manualconfig-base'
+        'manualconfig-base',
+        'autoconfig-installer',
+        'manualconfig-installer'
