update to guicey 4.0.1, dropwizard 1.0.5

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'dropwizard-guicey-examples'
 
-include 'autoconfig-base',
+include 'getting-started',
+        'autoconfig-base',
         'manualconfig-base',
         'autoconfig-installer',
         'manualconfig-installer',
