dropwizard jobs integration example

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ subprojects {
             dependency 'io.dropwizard.modules:dropwizard-flyway:1.1.0-1'
             dependency 'com.h2database:h2:1.4.193'
             dependency 'ru.vyarus:guice-validator:1.2.0'
+            dependency 'de.spinscale.dropwizard:dropwizard-jobs-guice:3.0.0'
         }
     }
     dependencies {
