update to ext 0.5.0; add jdbi3 example

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'getting-started',
         'bundle-base',
         'hibernate',
         'jdbi',
+        'jdbi3',
         'eventbus',
         'rest-sub-resource',
         'guice-validator',
