dropwizard-auth example

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ include 'getting-started',
         'hibernate',
         'jdbi',
         'jdbi3',
+        'auth',
         'eventbus',
         'rest-sub-resource',
         'guice-validator',
