--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ wrapper {
 description = 'Dropwizard guicey examples'
 
 ext {
-    guiceyBom = '0.6.0'
+    guiceyBom = '5.0.0-0-rc.1'
 }
 
 subprojects {
@@ -26,8 +26,6 @@ subprojects {
             mavenBom "ru.vyarus.guicey:guicey-bom:$guiceyBom"
         }
         dependencies {
-            dependency 'io.dropwizard.modules:dropwizard-flyway:1.3.0-4'
-            dependency 'com.h2database:h2:1.4.193'
             dependency 'ru.vyarus:guice-validator:1.2.0'
             dependency 'de.spinscale.dropwizard:dropwizard-jobs-guice:3.0.0'
         }
