SPA module usage example

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include 'getting-started',
         'eventbus',
         'rest-sub-resource',
         'guice-validator',
-        'dropwizard-jobs'
+        'dropwizard-jobs',
+        'spa'
