GSP module usage example

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ include 'getting-started',
         'rest-sub-resource',
         'guice-validator',
         'dropwizard-jobs',
-        'spa'
+        'spa',
+        'gsp'
