--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ wrapper {
 description = 'Dropwizard guicey examples'
 
 ext {
-    guiceyBom = '5.0.0-0-SNAPSHOT'
+    guiceyBom = '5.0.0-0-rc.2'
 }
 
 subprojects {
