add servlets and filters registration sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include 'core-getting-started',
         'core-autoconfig-installer',
         'core-manualconfig-installer',
         'core-bundle-base',
+        'core-servlets',
         'core-rest-sub-resource',
         'ext-jdbi',
         'ext-jdbi3',
