installers reset sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,12 +2,11 @@ rootProject.name = 'dropwizard-guicey-examples'
 
 include 'core-getting-started',
         'core-extensions',
-        'core-manualconfig-base',
-        'core-autoconfig-installer',
-        'core-manualconfig-installer',
         'core-bundle-base',
         'core-servlets',
         'core-rest-sub-resource',
+        'core-installers-reset',
+        'core-custom-installer',
         'ext-jdbi',
         'ext-jdbi3',
         'ext-eventbus',
