rename custom installer sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,7 @@ include 'core-getting-started',
         'core-rest-sub-resource',
         'core-bundle-plug-n-play',
         'core-installers-reset',
-        'core-custom-installer',
+        'core-installer-custom',
         'ext-jdbi',
         'ext-jdbi3',
         'ext-eventbus',
