--- a/integration-dropwizard-jobs/build.gradle
+++ b/integration-dropwizard-jobs/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compile 'de.spinscale.dropwizard:dropwizard-jobs-guice'
+    compile 'io.github.dropwizard-jobs:dropwizard-jobs-guice'
 }
