--- a/integration-auth/build.gradle
+++ b/integration-auth/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile 'io.dropwizard:dropwizard-auth'
+    implementation 'io.dropwizard:dropwizard-auth'
 
-    testCompile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.2'
+    testImplementation 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.2'
 }
