--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,21 @@
 language: java
-jdk:
-  - openjdk8
+dist: xenial
 
-sudo: false
+matrix:
+  include:
+    - jdk: openjdk8
+    - jdk: openjdk11
+
+before_install: chmod +x gradlew
 env:
-  - TERM=dumb
+  - TRAVIS=true
 
-before_install:
-  - chmod +x gradlew
-
-install:
-  - ./gradlew assemble
-
-script:
-  - ./gradlew check
+install: ./gradlew assemble --no-daemon
+script: travis_wait 20 ./gradlew check --no-daemon
 
 before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
   directories:
     - $HOME/.gradle/caches/
