add GSP SPA example

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ include 'core-getting-started',
         'ext-eventbus',
         'ext-spa',
         'ext-gsp',
+        'ext-gsp-spa',
         'integration-auth',
         'integration-hibernate',
         'integration-guice-validator',
