--- a/ext-jdbi3/build.gradle
+++ b/ext-jdbi3/build.gradle
@@ -1,10 +1,9 @@
 dependencies {
-//    if(JavaVersion.current() == JavaVersion.VERSION_1_8) {
-//        implementation 'ru.vyarus.guicey:guicey-jdbi3-jdk8'
-//    } else {
-//        implementation 'ru.vyarus.guicey:guicey-jdbi3'
-//    }
-    implementation 'ru.vyarus.guicey:guicey-jdbi3'
+    if(JavaVersion.current() == JavaVersion.VERSION_1_8) {
+        implementation 'ru.vyarus.guicey:guicey-jdbi3-jdk8'
+    } else {
+        implementation 'ru.vyarus.guicey:guicey-jdbi3'
+    }
 
     implementation 'com.h2database:h2'
     implementation 'io.dropwizard.modules:dropwizard-flyway'
