--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ wrapper {
 description = 'Dropwizard guicey examples'
 
 ext {
-    guiceyBom = '5.4.2-1'
+    guiceyBom = '5.5.0-1'
 }
 
 subprojects {
@@ -32,11 +32,10 @@ subprojects {
 
         implementation 'ru.vyarus:dropwizard-guicey'
 
-        testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
         testImplementation 'ru.vyarus:spock-junit5:1.0.0'
+        testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
         testImplementation "io.dropwizard:dropwizard-testing"
-
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api'
     }
 
     test {
