--- a/ext-jdbi3/build.gradle
+++ b/ext-jdbi3/build.gradle
@@ -6,5 +6,5 @@ dependencies {
     }
 
     implementation 'com.h2database:h2'
-    implementation 'io.dropwizard.modules:dropwizard-flyway'
+    implementation 'org.flywaydb:flyway-core'
 }
